--- a/public/home.html
+++ b/public/home.html
@@ -1,83 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>HR Dashboard</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="css/custom.css" />
-  <script type="module" src="./js/navigation.js" defer></script>
-  <script type="module" src="./js/home.js" defer></script>
-</head>
-<body class="bg-gray-100 text-gray-900 font-sans min-h-screen flex flex-col">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>HR Dashboard</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="css/custom.css" />
+    <script type="module" src="js/navigation.js" defer></script>
+    <script type="module" src="js/home.js" defer></script>
+  </head>
 
-  <header class="bg-blue-900 text-white shadow-md py-4">
-    <h1 class="text-2xl font-bold text-center tracking-tight">HR DASHBOARD</h1>
-  </header>
-
-  <main class="flex-1 container mx-auto p-6 space-y-6">
-
-    <section class="bg-gray-50 border border-gray-300 rounded-lg shadow-sm p-6 hover:shadow-md transition-all duration-200">
-      <h2 class="text-lg font-semibold mb-4 flex items-center space-x-2 text-gray-800">
-        <i class="fa-solid fa-chart-line text-blue-700"></i>
-        <span>Work Summary</span>
-      </h2>
-      <p id="work-summary" class="text-gray-700">Loading...</p>
-    </section>
-
-    <section class="bg-gray-50 border border-gray-300 rounded-lg shadow-sm p-6 hover:shadow-md transition-all duration-200">
-      <h2 class="text-lg font-semibold mb-4 flex items-center space-x-2 text-gray-800">
-        <i class="fa-solid fa-calendar-days text-green-700"></i>
-        <span>Today's Meetings</span>
-      </h2>
-      <div id="meetings-list" class="space-y-4 text-gray-700">
+  <body class="bg-gray-50 text-gray-900 min-h-screen flex flex-col font-inter">
+    <header
+      class="relative w-full z-40 mt-16 bg-white/90 backdrop-blur-md border-b border-gray-200 shadow-sm transition-all duration-300"
+    >
+      <div
+        class="max-w-6xl mx-auto flex items-center justify-center px-6 py-5 text-center"
+      >
+        <h1 class="text-2xl font-semibold text-blue-900 tracking-wide">
+          HR Dashboard
+        </h1>
       </div>
-    </section>
+    </header>
 
-    <section class="bg-gray-50 border border-gray-300 rounded-lg shadow-sm p-6 hover:shadow-md transition-all duration-200">
-      <h2 class="text-lg font-semibold mb-4 flex items-center space-x-2 text-gray-800">
-        <i class="fa-solid fa-clipboard-check text-yellow-700"></i>
-        <span>Today's Tasks</span>
-      </h2>
-      <div id="tasks-list" class="space-y-4 text-gray-700">
-      </div>
-    </section>
+    <main
+      class="flex-1 container mx-auto px-4 sm:px-6 lg:px-8 pt-10 pb-16 space-y-8"
+    >
+      <section
+        class="bg-white/90 backdrop-blur-sm border border-gray-200 p-6 rounded-2xl shadow-sm hover:shadow-md transition-all duration-200"
+      >
+        <h2
+          class="text-lg font-semibold mb-4 flex items-center space-x-2 text-blue-900"
+        >
+          <i class="fa-solid fa-chart-line text-blue-800"></i>
+          <span>Work Summary</span>
+        </h2>
+        <p id="work-summary" class="text-gray-700">Loading...</p>
+      </section>
 
-  </main>
+      <section
+        class="bg-white/90 backdrop-blur-sm border border-gray-200 p-6 rounded-2xl shadow-sm hover:shadow-md transition-all duration-200"
+      >
+        <h2
+          class="text-lg font-semibold mb-4 flex items-center space-x-2 text-blue-900"
+        >
+          <i class="fa-solid fa-calendar-days text-green-700"></i>
+          <span>Today's Meetings</span>
+        </h2>
+        <div id="meetings-list" class="space-y-4 text-gray-700"></div>
+      </section>
 
-  <template id="meeting-card-template">
-    <div class="meeting-card border rounded p-4 bg-white shadow-sm hover:shadow-md cursor-pointer transition-all duration-200">
-      <div class="flex justify-between items-start">
-        <div>
-          <h3 class="font-semibold text-gray-800 meeting-title">Meeting Title</h3>
-          <p class="text-sm text-gray-500 meeting-meta">Organizer | Position | Department</p>
-          <p class="text-sm text-gray-500 mt-1 meeting-type"><i class="fa-solid fa-video mr-1"></i> Online / <i class="fa-solid fa-location-dot mr-1"></i> Location</p>
+      <section
+        class="bg-white/90 backdrop-blur-sm border border-gray-200 p-6 rounded-2xl shadow-sm hover:shadow-md transition-all duration-200"
+      >
+        <h2
+          class="text-lg font-semibold mb-4 flex items-center space-x-2 text-blue-900"
+        >
+          <i class="fa-solid fa-clipboard-check text-yellow-700"></i>
+          <span>Today's Tasks</span>
+        </h2>
+        <div id="tasks-list" class="space-y-4 text-gray-700"></div>
+      </section>
+    </main>
+
+    <template id="meeting-card-template">
+      <div
+        class="meeting-card border border-gray-200 rounded-2xl p-4 bg-gray-50 shadow-sm hover:shadow-md transition-all duration-200 cursor-pointer"
+      >
+        <div class="flex justify-between items-start">
+          <div>
+            <h3 class="font-semibold text-gray-900 meeting-title">
+              Meeting Title
+            </h3>
+            <p class="text-sm text-gray-500 meeting-meta">
+              Organizer | Position | Department
+            </p>
+            <p class="text-sm text-gray-500 mt-1 meeting-type">
+              <i class="fa-solid fa-video mr-1 text-blue-700"></i>Online /
+              <i class="fa-solid fa-location-dot mr-1 text-red-500"></i>Location
+            </p>
+          </div>
+          <div class="flex -space-x-2 participants-stack mt-1"></div>
         </div>
-        <div class="flex -space-x-2 participants-stack mt-1">
+        <ul
+          class="mt-3 hidden meeting-details list-disc list-inside text-sm text-gray-600"
+        ></ul>
+      </div>
+    </template>
+
+    <template id="task-card-template">
+      <div
+        class="task-card border border-gray-200 rounded-2xl p-4 bg-gray-50 shadow-sm hover:shadow-md transition-all duration-200 cursor-pointer"
+      >
+        <div class="flex justify-between items-center">
+          <div>
+            <h3 class="font-semibold text-gray-900 task-title">Task Title</h3>
+            <p class="text-sm text-gray-500 task-meta">
+              Assigned by: Name | Position | Department
+            </p>
+            <p class="text-sm text-gray-500 task-status mt-1">
+              <i class="fa-solid fa-flag mr-1 text-yellow-600"></i>Status
+            </p>
+          </div>
+          <i
+            class="fa-solid fa-chevron-down task-toggle text-gray-400 text-sm"
+          ></i>
+        </div>
+        <div class="task-details mt-3 hidden text-sm text-gray-600">
+          <p class="task-description">Task description here...</p>
+          <p class="mt-1">
+            Deadline: <span class="task-deadline">YYYY-MM-DD</span>
+          </p>
         </div>
       </div>
-      <ul class="mt-3 hidden meeting-details list-disc list-inside text-sm text-gray-600">
-      </ul>
-    </div>
-  </template>
-
-  <template id="task-card-template">
-    <div class="task-card border rounded p-4 bg-white shadow-sm hover:shadow-md cursor-pointer transition-all duration-200">
-      <div class="flex justify-between items-center">
-        <div>
-          <h3 class="font-semibold text-gray-800 task-title">Task Title</h3>
-          <p class="text-sm text-gray-500 task-meta">Assigned by: Name | Position | Department</p>
-          <p class="text-sm text-gray-500 task-status mt-1"><i class="fa-solid fa-flag mr-1"></i>Status</p>
-        </div>
-        <i class="fa-solid fa-chevron-down task-toggle text-gray-400"></i>
-      </div>
-      <div class="task-details mt-3 hidden text-sm text-gray-600">
-        <p class="task-description">Task description here...</p>
-        <p class="mt-1">Deadline: <span class="task-deadline">YYYY-MM-DD</span></p>
-      </div>
-    </div>
-  </template>
-
-</body>
+    </template>
+  </body>
 </html>
