--- a/public/hr-tools.html
+++ b/public/hr-tools.html
@@ -11,19 +11,38 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="stylesheet" href="css/custom.css" />
     <script type="module" src="js/navigation.js" defer></script>
     <script type="module" src="js/hr-tools.js" defer></script>
   </head>
-  <body class="bg-gray-100 text-gray-900 min-h-screen flex flex-col">
-    <header class="bg-blue-900 text-white py-4 shadow-md">
-      <h1 class="text-2xl font-bold text-center">HR Tools</h1>
+
+  <body class="bg-gray-50 text-gray-900 min-h-screen flex flex-col font-inter">
+    <header
+      class="relative w-full z-40 mt-16 bg-white/90 backdrop-blur-md border-b border-gray-200 shadow-sm transition-all duration-300"
+    >
+      <div
+        class="max-w-6xl mx-auto flex items-center justify-center px-6 py-5 text-center"
+      >
+        <h1 class="text-2xl font-semibold text-blue-900 tracking-wide">
+          HR Tools
+        </h1>
+      </div>
     </header>
 
-    <main class="flex-1 container mx-auto p-6">
-      <section class="mb-6 flex flex-col sm:flex-row sm:items-center sm:justify-between gap-4">
-        <div class="flex gap-2 items-center">
-          <label for="department-filter" class="text-gray-700 font-medium">Filter by Department:</label>
-          <select id="department-filter" class="border border-gray-300 rounded px-2 py-1">
+    <main class="flex-1 container mx-auto px-4 sm:px-6 lg:px-8 pt-10 pb-16">
+      <section
+        class="mb-8 flex flex-col sm:flex-row sm:items-center sm:justify-between gap-6 bg-white/90 backdrop-blur-sm border border-gray-200 rounded-2xl shadow-sm p-6"
+      >
+        <div
+          class="flex flex-col sm:flex-row items-start sm:items-center gap-3 w-full sm:w-auto"
+        >
+          <label for="department-filter" class="text-gray-700 font-medium"
+            >Filter by Department:</label
+          >
+          <select
+            id="department-filter"
+            class="border border-gray-300 rounded-xl p-2 bg-gray-50 text-gray-900 focus:outline-none focus:ring-2 focus:ring-blue-900 transition-all duration-200"
+          >
             <option value="">All</option>
             <option value="IT">IT</option>
             <option value="HR">HR</option>
@@ -35,13 +54,17 @@
           </select>
         </div>
 
-        <div class="flex gap-2 items-center">
-          <label for="search-name" class="text-gray-700 font-medium">Search by Name:</label>
+        <div
+          class="flex flex-col sm:flex-row items-start sm:items-center gap-3 w-full sm:w-auto"
+        >
+          <label for="search-name" class="text-gray-700 font-medium"
+            >Search by Name:</label
+          >
           <input
             id="search-name"
             type="text"
             placeholder="Employee Name"
-            class="border border-gray-300 rounded px-2 py-1"
+            class="border border-gray-300 rounded-xl p-2 bg-gray-50 text-gray-900 focus:outline-none focus:ring-2 focus:ring-blue-900 transition-all duration-200 w-full sm:w-auto"
           />
         </div>
       </section>
@@ -50,25 +73,66 @@
         id="hr-tools-container"
         class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6"
       >
-        <p class="text-gray-500 col-span-full">Loading users...</p>
+        <p class="text-gray-500 col-span-full text-center">Loading users...</p>
       </section>
 
-      <section id="edit-user-modal" class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50">
-        <div class="bg-white rounded-lg shadow-xl p-6 w-full max-w-md">
-          <h2 class="text-xl font-semibold mb-4">Edit User</h2>
-          <form id="edit-user-form" class="flex flex-col gap-3">
+      <section
+        id="edit-user-modal"
+        class="hidden fixed inset-0 bg-black/50 backdrop-blur-sm flex items-center justify-center z-50"
+      >
+        <div
+          class="bg-white rounded-2xl shadow-xl p-6 w-full max-w-md border border-gray-200"
+        >
+          <div class="flex items-center justify-between mb-4">
+            <h2 class="text-xl font-semibold text-blue-900">Edit User</h2>
+            <button
+              id="close-edit-modal"
+              class="text-gray-500 hover:text-red-500 transition-all duration-200"
+            >
+              <i class="fa-solid fa-xmark text-lg"></i>
+            </button>
+          </div>
+
+          <form id="edit-user-form" class="space-y-4">
             <input type="hidden" id="edit-user-id" />
-            <label class="flex flex-col">
-              Name
-              <input type="text" id="edit-user-name" class="border border-gray-300 rounded px-2 py-1" disabled />
-            </label>
-            <label class="flex flex-col">
-              Position
-              <input type="text" id="edit-user-position" class="border border-gray-300 rounded px-2 py-1" />
-            </label>
-            <label class="flex flex-col">
-              Department
-              <select id="edit-user-department" class="border border-gray-300 rounded px-2 py-1">
+
+            <div>
+              <label
+                for="edit-user-name"
+                class="block text-gray-700 font-medium mb-1"
+                >Name</label
+              >
+              <input
+                type="text"
+                id="edit-user-name"
+                class="w-full border border-gray-300 rounded-xl p-3 bg-gray-50 text-gray-900"
+                disabled
+              />
+            </div>
+
+            <div>
+              <label
+                for="edit-user-position"
+                class="block text-gray-700 font-medium mb-1"
+                >Position</label
+              >
+              <input
+                type="text"
+                id="edit-user-position"
+                class="w-full border border-gray-300 rounded-xl p-3 bg-gray-50 text-gray-900"
+              />
+            </div>
+
+            <div>
+              <label
+                for="edit-user-department"
+                class="block text-gray-700 font-medium mb-1"
+                >Department</label
+              >
+              <select
+                id="edit-user-department"
+                class="w-full border border-gray-300 rounded-xl p-3 bg-gray-50 text-gray-900"
+              >
                 <option value="IT">IT</option>
                 <option value="HR">HR</option>
                 <option value="Sales">Sales</option>
@@ -77,10 +141,22 @@
                 <option value="Operations">Operations</option>
                 <option value="Support">Support</option>
               </select>
-            </label>
-            <div class="flex justify-end gap-2 mt-4">
-              <button type="button" id="close-edit-modal" class="px-4 py-2 bg-gray-200 rounded hover:bg-gray-300">Cancel</button>
-              <button type="submit" class="px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700">Save</button>
+            </div>
+
+            <div class="flex justify-end gap-3 pt-2">
+              <button
+                type="button"
+                id="cancel-edit"
+                class="px-5 py-2 bg-gray-200 rounded-xl hover:bg-gray-300 transition-all duration-200"
+              >
+                Cancel
+              </button>
+              <button
+                type="submit"
+                class="px-5 py-2 bg-blue-900 text-white rounded-xl hover:bg-blue-800 transition-all duration-200"
+              >
+                Save
+              </button>
             </div>
           </form>
         </div>
