--- a/public/leaves.html
+++ b/public/leaves.html
@@ -1,72 +1,136 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Leaves Management</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-    crossorigin="anonymous"
-    referrerpolicy="no-referrer"
-  />
-  <link rel="stylesheet" href="css/custom.css" />
-  <script type="module" src="./js/leaves.js" defer></script>
-  <script type="module" src="./js/navigation.js" defer></script>
-</head>
-<body class="bg-gray-50 text-gray-900 min-h-screen flex flex-col">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Leaves Management</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="css/custom.css" />
+    <script type="module" src="js/navigation.js" defer></script>
+    <script type="module" src="js/leaves.js" defer></script>
+  </head>
 
-  <header class="bg-white shadow-sm hover:shadow-md transition-all duration-200 sticky top-0 z-50">
-    <div class="max-w-6xl mx-auto px-4 py-6 text-center">
-      <h1 class="text-2xl font-bold text-blue-900 tracking-wide">LEAVES MANAGEMENT</h1>
-    </div>
-  </header>
+  <body class="bg-gray-50 text-gray-900 min-h-screen flex flex-col font-inter">
+    <header
+      class="relative w-full z-40 mt-16 bg-white/90 backdrop-blur-md border-b border-gray-200 shadow-sm transition-all duration-300"
+    >
+      <div
+        class="max-w-6xl mx-auto flex items-center justify-center px-6 py-5 text-center"
+      >
+        <h1 class="text-2xl font-semibold text-blue-900 tracking-wide">
+          Leaves Management
+        </h1>
+      </div>
+    </header>
 
-  <main class="flex-1 container mx-auto p-4 space-y-8">
-
-    <section id="leave-form-section" class="bg-white p-6 rounded-2xl shadow-sm hover:shadow-md transition-all duration-200 max-w-lg mx-auto hidden">
-      <h2 class="text-xl font-semibold mb-4 text-blue-900">Apply for Leave</h2>
-      <form id="leave-form" class="space-y-4">
-        <div>
-          <label for="leave-type" class="block text-gray-700 font-medium mb-1">Leave Type</label>
-          <select id="leave-type" required class="mt-1 block w-full border border-gray-300 rounded-xl p-3 bg-gray-50 text-gray-900 focus:outline-none focus:ring-2 focus:ring-blue-900 transition-all duration-200">
-            <option value="sick">Sick</option>
-            <option value="casual">Casual</option>
-            <option value="vacation">Vacation</option>
-            <option value="other">Other</option>
-          </select>
-        </div>
-        <div class="flex gap-4">
-          <div class="flex-1">
-            <label for="start-date" class="block text-gray-700 font-medium mb-1">Start Date</label>
-            <input type="date" id="start-date" required class="mt-1 block w-full border border-gray-300 rounded-xl p-3 bg-gray-50 text-gray-900 focus:outline-none focus:ring-2 focus:ring-blue-900 transition-all duration-200" />
+    <main class="flex-1 container mx-auto px-4 sm:px-6 lg:px-8 pt-10 pb-16">
+      <section
+        id="leave-form-section"
+        class="bg-white/90 backdrop-blur-sm border border-gray-200 p-6 rounded-2xl shadow-sm hover:shadow-md transition-all duration-200 max-w-lg mx-auto hidden"
+      >
+        <h2 class="text-xl font-semibold mb-4 text-blue-900">
+          Apply for Leave
+        </h2>
+        <form id="leave-form" class="space-y-4">
+          <div>
+            <label for="leave-type" class="block text-gray-700 font-medium mb-1"
+              >Leave Type</label
+            >
+            <select
+              id="leave-type"
+              required
+              class="mt-1 block w-full border border-gray-300 rounded-xl p-3 bg-gray-50 text-gray-900 focus:outline-none focus:ring-2 focus:ring-blue-900 transition-all duration-200"
+            >
+              <option value="sick">Sick</option>
+              <option value="casual">Casual</option>
+              <option value="vacation">Vacation</option>
+              <option value="other">Other</option>
+            </select>
           </div>
-          <div class="flex-1">
-            <label for="end-date" class="block text-gray-700 font-medium mb-1">End Date</label>
-            <input type="date" id="end-date" required class="mt-1 block w-full border border-gray-300 rounded-xl p-3 bg-gray-50 text-gray-900 focus:outline-none focus:ring-2 focus:ring-blue-900 transition-all duration-200" />
+
+          <div class="flex flex-col sm:flex-row gap-4">
+            <div class="flex-1">
+              <label
+                for="start-date"
+                class="block text-gray-700 font-medium mb-1"
+                >Start Date</label
+              >
+              <input
+                type="date"
+                id="start-date"
+                required
+                class="mt-1 block w-full border border-gray-300 rounded-xl p-3 bg-gray-50 text-gray-900 focus:outline-none focus:ring-2 focus:ring-blue-900 transition-all duration-200"
+              />
+            </div>
+            <div class="flex-1">
+              <label for="end-date" class="block text-gray-700 font-medium mb-1"
+                >End Date</label
+              >
+              <input
+                type="date"
+                id="end-date"
+                required
+                class="mt-1 block w-full border border-gray-300 rounded-xl p-3 bg-gray-50 text-gray-900 focus:outline-none focus:ring-2 focus:ring-blue-900 transition-all duration-200"
+              />
+            </div>
           </div>
-        </div>
-        <p id="message" class="text-center text-sm text-red-500 font-medium"></p>
-        <button type="submit" class="w-full bg-blue-900 text-white p-3 rounded-2xl font-semibold hover:bg-blue-800 transition-all duration-200">
-          Apply
+
+          <p
+            id="message"
+            class="text-center text-sm text-red-500 font-medium"
+          ></p>
+          <button
+            type="submit"
+            class="w-full bg-blue-900 text-white p-3 rounded-2xl font-semibold hover:bg-blue-800 transition-all duration-200"
+          >
+            Apply
+          </button>
+        </form>
+      </section>
+
+      <div
+        id="filters-row"
+        class="flex justify-center gap-4 flex-wrap mb-8 hidden"
+      >
+        <button
+          data-filter="all"
+          class="filter-btn bg-gray-100 hover:bg-gray-200 px-4 py-2 rounded-xl shadow-sm hover:shadow-md transition-all duration-200 text-blue-900 font-medium"
+        >
+          All
         </button>
-      </form>
-    </section>
+        <button
+          data-filter="pending"
+          class="filter-btn bg-gray-100 hover:bg-gray-200 px-4 py-2 rounded-xl shadow-sm hover:shadow-md transition-all duration-200 text-blue-900 font-medium"
+        >
+          Pending
+        </button>
+        <button
+          data-filter="approved"
+          class="filter-btn bg-gray-100 hover:bg-gray-200 px-4 py-2 rounded-xl shadow-sm hover:shadow-md transition-all duration-200 text-blue-900 font-medium"
+        >
+          Approved
+        </button>
+        <button
+          data-filter="rejected"
+          class="filter-btn bg-gray-100 hover:bg-gray-200 px-4 py-2 rounded-xl shadow-sm hover:shadow-md transition-all duration-200 text-blue-900 font-medium"
+        >
+          Rejected
+        </button>
+      </div>
 
-    <div id="filters-row" class="flex justify-center gap-4 flex-wrap mb-6 hidden">
-      <button data-filter="all" class="filter-btn bg-gray-200 hover:bg-gray-300 px-4 py-2 rounded-xl shadow-sm hover:shadow-md transition-all duration-200">All</button>
-      <button data-filter="pending" class="filter-btn bg-gray-200 hover:bg-gray-300 px-4 py-2 rounded-xl shadow-sm hover:shadow-md transition-all duration-200">Pending</button>
-      <button data-filter="approved" class="filter-btn bg-gray-200 hover:bg-gray-300 px-4 py-2 rounded-xl shadow-sm hover:shadow-md transition-all duration-200">Approved</button>
-      <button data-filter="rejected" class="filter-btn bg-gray-200 hover:bg-gray-300 px-4 py-2 rounded-xl shadow-sm hover:shadow-md transition-all duration-200">Rejected</button>
-    </div>
-
-    <section id="my-leaves-section" class="hidden bg-white p-6 rounded-2xl shadow-sm hover:shadow-md transition-all duration-200">
-      <h2 class="text-lg font-semibold mb-3 text-blue-900">My Leaves</h2>
-      <ul id="my-leaves-list" class="space-y-2"></ul>
-    </section>
-
-  </main>
-
-</body>
+      <section
+        id="my-leaves-section"
+        class="hidden bg-white/90 backdrop-blur-sm border border-gray-200 p-6 rounded-2xl shadow-sm hover:shadow-md transition-all duration-200"
+      >
+        <h2 class="text-lg font-semibold mb-3 text-blue-900">My Leaves</h2>
+        <ul id="my-leaves-list" class="space-y-2"></ul>
+      </section>
+    </main>
+  </body>
 </html>
