--- a/public/notes.html
+++ b/public/notes.html
@@ -9,35 +9,43 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
       crossorigin="anonymous"
-      referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="css/custom.css" />
   </head>
-  <body class="bg-gray-100 min-h-screen flex flex-col">
+
+  <body
+    class="bg-[var(--onyx-bg-base)] text-[var(--onyx-text-primary)] min-h-screen flex flex-col font-inter"
+  >
     <header
-      class="bg-blue-900 text-white py-4 shadow-md flex align-center px-10 justify-between"
+      class="nav-onyx sticky top-0 z-50 flex items-center justify-between px-4 sm:px-6 lg:px-8 py-4 backdrop-blur-xl border-b border-[var(--onyx-border)] shadow-[0_4px_20px_rgba(0,0,0,0.1)]"
     >
       <button
         onclick="window.history.back()"
-        class="text-white hover:text-gray-300 transition"
+        class="text-[var(--onyx-text-secondary)] hover:text-[var(--onyx-accent-1)] transition flex items-center gap-2"
       >
         <i class="fa-solid fa-chevron-left text-lg"></i>
       </button>
-      <h1 class="text-2xl font-bold text-center">Notes</h1>
-    </header>
-    <main
-      class="flex-1 container mx-auto p-6 flex flex-col items-center justify-center"
-    >
-      <div
-        class="bg-white rounded-lg shadow-lg p-6 text-center w-full max-w-md"
+      <h1
+        class="text-lg sm:text-xl md:text-2xl font-semibold tracking-tight text-center flex-1 uppercase"
       >
-        <i class="fa-solid fa-info-circle text-3xl text-blue-700 mb-4"></i>
-        <h2 class="text-lg font-semibold mb-2">No functionality yet</h2>
-        <p class="text-gray-600">
-          This page has no JavaScript or API connected. It is just a placeholder
-          for now.
+        Notes
+      </h1>
+      <div class="w-6"></div>
+    </header>
+
+    <main
+      class="flex-1 container-onyx py-10 px-4 sm:px-6 lg:px-10 flex flex-col items-center justify-center"
+    >
+      <section class="card-onyx text-center w-full max-w-md p-8 space-y-4">
+        <i
+          class="fa-solid fa-info-circle text-3xl text-[var(--onyx-accent-1)]"
+        ></i>
+        <h2 class="text-base sm:text-lg font-semibold">No functionality yet</h2>
+        <p class="text-[var(--onyx-text-secondary)] text-sm sm:text-base">
+          This page currently has no active JavaScript or API. Placeholder for
+          upcoming features.
         </p>
-      </div>
+      </section>
     </main>
   </body>
 </html>
