--- a/public/payrolls.html
+++ b/public/payrolls.html
@@ -1,115 +1,176 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Payrolls</title>
-<script src="https://cdn.tailwindcss.com"></script>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" crossorigin="anonymous"/>
-<script type="module" src="./js/payrolls.js" defer></script>
-</head>
-<body class="bg-gray-50 min-h-screen font-sans text-gray-900 flex flex-col">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Payrolls</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="css/custom.css" />
+    <script type="module" src="./js/payrolls.js" defer></script>
+  </head>
 
-<header class="bg-white shadow sticky top-0 z-50">
-  <div class="max-w-6xl mx-auto px-4 py-4 flex items-center justify-between">
-    <button onclick="history.back()" class="text-gray-500 hover:text-gray-700 flex items-center gap-2">
-      <i class="fa-solid fa-arrow-left"></i> Back
-    </button>
-    <h1 class="text-2xl font-bold text-blue-900 text-center flex-1">Payrolls</h1>
-    <div class="w-12"></div>
-  </div>
-</header>
-
-<main class="flex-1 container mx-auto p-4 space-y-6">
-
-  <div class="flex flex-col md:flex-row md:items-center md:justify-between gap-4">
-    <div class="flex gap-2">
-      <button id="btn-my-payrolls" class="px-4 py-2 bg-blue-900 text-white rounded-lg hover:bg-blue-800 flex items-center gap-2">
-        <i class="fa-solid fa-user"></i> My Payrolls
+  <body
+    class="bg-[var(--onyx-bg-base)] text-[var(--onyx-text-primary)] min-h-screen font-inter flex flex-col"
+  >
+    <header
+      class="nav-onyx sticky top-0 z-50 flex items-center justify-between px-4 sm:px-6 lg:px-8 py-4 backdrop-blur-xl border-b border-[var(--onyx-border)] shadow-[0_4px_20px_rgba(0,0,0,0.1)]"
+    >
+      <button
+        onclick="history.back()"
+        class="text-[var(--onyx-text-secondary)] hover:text-[var(--onyx-accent-1)] flex items-center gap-2 transition"
+      >
+        <i class="fa-solid fa-chevron-left"></i>
       </button>
-      <button id="btn-all-payrolls" class="px-4 py-2 bg-green-600 text-white rounded-lg hover:bg-green-700 flex items-center gap-2">
-        <i class="fa-solid fa-list"></i> All Payrolls
-      </button>
-    </div>
-    <input id="search-payrolls" type="text" placeholder="Search by name or department..." class="border rounded-lg p-2 text-sm w-full md:w-64 focus:ring-2 focus:ring-blue-500 focus:border-blue-500"/>
-  </div>
+      <h1
+        class="text-lg sm:text-xl md:text-2xl font-semibold tracking-tight text-center flex-1 uppercase"
+      >
+        Payrolls
+      </h1>
+      <div class="w-10"></div>
+    </header>
 
-  <section>
-    <div id="payroll-container" class="space-y-4 w-full">
-      <p class="text-gray-500 text-center py-6">Loading payrolls...</p>
-    </div>
-  </section>
-</main>
+    <main
+      class="flex-1 container-onyx py-8 sm:py-10 px-4 sm:px-6 lg:px-10 space-y-8 fade-in"
+    >
+      <div
+        class="flex flex-col md:flex-row md:items-center md:justify-between gap-4"
+      >
+        <div class="flex flex-wrap gap-3">
+          <button
+            id="btn-my-payrolls"
+            class="btn-onyx-primary flex items-center gap-2"
+          >
+            <i class="fa-solid fa-user"></i> <span>My Payrolls</span>
+          </button>
+          <button
+            id="btn-all-payrolls"
+            class="btn-onyx-accent flex items-center gap-2"
+          >
+            <i class="fa-solid fa-list"></i> <span>All Payrolls</span>
+          </button>
+        </div>
+        <input
+          id="search-payrolls"
+          type="text"
+          placeholder="Search by name or department..."
+          class="input-onyx w-full md:w-64 text-sm"
+        />
+      </div>
 
-<button id="add-payroll-btn" class="hidden fixed bottom-6 right-6 bg-blue-900 text-white p-3 rounded-lg flex items-center justify-center shadow-lg hover:bg-blue-800 z-50">
-  <i class="fa-solid fa-plus"></i> <span class="ml-2">Add Payroll</span>
-</button>
+      <section>
+        <div id="payroll-container" class="space-y-4 w-full">
+          <p class="text-[var(--onyx-text-secondary)] text-center py-6">
+            Loading payrolls...
+          </p>
+        </div>
+      </section>
+    </main>
 
-<div id="payroll-modal" class="hidden fixed inset-0 bg-black bg-opacity-40 justify-center items-center z-50">
-  <div class="bg-white w-full max-w-lg rounded-2xl shadow-lg p-6 relative mx-4">
-    <button id="close-payroll-modal" class="absolute top-4 right-4 text-gray-500 hover:text-gray-700">
-      <i class="fa-solid fa-xmark"></i>
+    <button
+      id="add-payroll-btn"
+      class="hidden fixed bottom-6 right-6 btn-onyx-primary flex items-center gap-2 z-50"
+    >
+      <i class="fa-solid fa-plus"></i> <span>Add Payroll</span>
     </button>
-    <h2 class="text-lg font-semibold text-blue-900 flex items-center gap-2 mb-4">
-      <i class="fa-solid fa-file-invoice-dollar"></i> Submit Payroll
-    </h2>
-    <form id="payroll-form" class="space-y-4">
 
-      <div>
-        <label class="block text-sm font-medium text-gray-700 mb-1">Select Employee</label>
-        <select id="employee-select" class="w-full border rounded-lg p-2 text-sm">
-          <option value="">Select Employee</option>
-        </select>
-      </div>
-
-      <div>
-        <label class="block text-sm font-medium text-gray-700 mb-1">Approved Expenses</label>
-        <div id="expenses-container" class="border rounded-lg p-3 bg-gray-50 text-sm text-gray-700 space-y-1">
-          <p>No approved expenses yet</p>
-        </div>
-      </div>
-
-      <div class="flex flex-col md:flex-row md:gap-4 gap-2">
-        <div class="flex-1">
-          <label class="block text-sm font-medium text-gray-700 mb-1">Base Salary</label>
-          <input type="number" step="0.01" id="base-salary" class="w-full border rounded-lg p-2 text-sm"/>
-        </div>
-        <div class="flex-1">
-          <label class="block text-sm font-medium text-gray-700 mb-1">Additions</label>
-          <input type="number" step="0.01" id="additions" class="w-full border rounded-lg p-2 text-sm"/>
-        </div>
-      </div>
-
-      <div class="flex flex-col md:flex-row md:gap-4 gap-2">
-        <div class="flex-1">
-          <label class="block text-sm font-medium text-gray-700 mb-1">Deductions</label>
-          <input type="number" step="0.01" id="deductions" class="w-full border rounded-lg p-2 text-sm"/>
-        </div>
-        <div class="flex-1">
-          <label class="block text-sm font-medium text-gray-700 mb-1">Taxes</label>
-          <input type="number" step="0.01" id="taxes" class="w-full border rounded-lg p-2 text-sm"/>
-        </div>
-      </div>
-
-      <div class="flex flex-col md:flex-row md:gap-4 gap-2">
-        <div class="flex-1">
-          <label class="block text-sm font-medium text-gray-700 mb-1">Year</label>
-          <input type="number" id="payroll-year" class="w-full border rounded-lg p-2 text-sm"/>
-        </div>
-        <div class="flex-1">
-          <label class="block text-sm font-medium text-gray-700 mb-1">Month</label>
-          <input type="number" id="payroll-month" class="w-full border rounded-lg p-2 text-sm"/>
-        </div>
-      </div>
-
-      <div class="flex justify-end">
-        <button type="submit" class="px-6 py-2 bg-blue-900 text-white rounded-lg hover:bg-blue-800 flex items-center gap-2">
-          <i class="fa-solid fa-paper-plane"></i> Submit
+    <div
+      id="payroll-modal"
+      class="hidden fixed inset-0 bg-black bg-opacity-40 justify-center items-center z-50"
+    >
+      <div class="card-onyx w-full max-w-lg mx-4 p-6 sm:p-8 relative">
+        <button
+          id="close-payroll-modal"
+          class="absolute top-4 right-4 text-[var(--onyx-text-secondary)] hover:text-[var(--onyx-accent-1)]"
+        >
+          <i class="fa-solid fa-xmark"></i>
         </button>
-      </div>
-    </form>
-  </div>
-</div>
+        <h2
+          class="text-lg sm:text-xl font-semibold mb-6 flex items-center gap-2 text-[var(--onyx-accent-1)]"
+        >
+          <i class="fa-solid fa-file-invoice-dollar"></i> Submit Payroll
+        </h2>
 
-</body>
+        <form id="payroll-form" class="space-y-6">
+          <div>
+            <label class="label-onyx">Select Employee</label>
+            <select id="employee-select" class="input-onyx">
+              <option value="">Select Employee</option>
+            </select>
+          </div>
+
+          <div>
+            <label class="label-onyx">Approved Expenses</label>
+            <div
+              id="expenses-container"
+              class="card-onyx bg-[var(--onyx-bg-surface)] text-sm text-[var(--onyx-text-secondary)] space-y-1 p-3"
+            >
+              <p>No approved expenses yet</p>
+            </div>
+          </div>
+
+          <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+            <div>
+              <label class="label-onyx">Base Salary</label>
+              <input
+                type="number"
+                step="0.01"
+                id="base-salary"
+                class="input-onyx"
+              />
+            </div>
+            <div>
+              <label class="label-onyx">Additions</label>
+              <input
+                type="number"
+                step="0.01"
+                id="additions"
+                class="input-onyx"
+              />
+            </div>
+          </div>
+
+          <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+            <div>
+              <label class="label-onyx">Deductions</label>
+              <input
+                type="number"
+                step="0.01"
+                id="deductions"
+                class="input-onyx"
+              />
+            </div>
+            <div>
+              <label class="label-onyx">Taxes</label>
+              <input type="number" step="0.01" id="taxes" class="input-onyx" />
+            </div>
+          </div>
+
+          <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+            <div>
+              <label class="label-onyx">Year</label>
+              <input type="number" id="payroll-year" class="input-onyx" />
+            </div>
+            <div>
+              <label class="label-onyx">Month</label>
+              <input type="number" id="payroll-month" class="input-onyx" />
+            </div>
+          </div>
+
+          <div class="flex justify-end">
+            <button
+              type="submit"
+              class="btn-onyx-accent flex items-center gap-2"
+            >
+              <i class="fa-solid fa-paper-plane"></i> <span>Submit</span>
+            </button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </body>
 </html>
